# org-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  README.org  main.py  pyproject.toml
.github/workflows/: ci.yml  python-test-publish.yml
references/: get-references.sh  llms-full.txt  mcp-python-readme.md
src/org_mcp/: cli.py  server.py
tests/: test_server.py
