[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "org-mcp"
version = "0.3.1"
description = "A python-based MCP server for your local org mode files"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
authors = [
    {name = "Andy Reagan", email = "andy@andyreagan.com"}
]
dependencies = [
    "mcp[cli]>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/andyreagan/org-mcp"
Repository = "https://github.com/andyreagan/org-mcp"
Issues = "https://github.com/andyreagan/org-mcp/issues"

[project.scripts]
org-mcp = "org_mcp.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/org_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
